--- a/LoginWithRxSwift/LoginWithRxSwift/Base.lproj/Main.storyboard
+++ b/LoginWithRxSwift/LoginWithRxSwift/Base.lproj/Main.storyboard
@@ -157,7 +157,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sign Up" id="3qS-DS-Iky">
-                        <barButtonItem key="rightBarButtonItem" title="LogIn" id="rrl-Bj-qZC"/>
+                        <barButtonItem key="rightBarButtonItem" title="LogIn" id="rrl-Bj-qZC">
+                            <connections>
+                                <segue destination="gW6-b7-L5Q" kind="show" id="CdH-fd-OCs"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="loginButton" destination="rrl-Bj-qZC" id="Roo-ct-DQX"/>
@@ -173,6 +177,158 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D5g-Jy-Rhr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="977" y="139"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="E9Z-Xa-OP8">
+            <objects>
+                <viewController id="gW6-b7-L5Q" customClass="LoginViewController" customModule="LoginWithRxSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rtA-QJ-qEA"/>
+                        <viewControllerLayoutGuide type="bottom" id="RnI-D1-A7s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cdP-Pu-5sP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91G-Pk-Dkl">
+                                <rect key="frame" x="16" y="118" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGR-5R-LJL">
+                                <rect key="frame" x="16" y="208" width="74" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nne-vw-IIk">
+                                <rect key="frame" x="113" y="203" width="150" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正確" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XPg-uB-KMp">
+                                <rect key="frame" x="170" y="153" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V0h-dR-Pkr">
+                                <rect key="frame" x="113" y="324" width="150" height="40"/>
+                                <color key="backgroundColor" red="1" green="0.30198943449999999" blue="0.2437586407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <state key="normal" title="登入">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="jnf-iy-T1o" kind="show" identifier="container" id="MJD-xZ-lp7"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cNz-sy-Zwo">
+                                <rect key="frame" x="112" y="114" width="150" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RnI-D1-A7s" firstAttribute="top" secondItem="V0h-dR-Pkr" secondAttribute="bottom" constant="303" id="2dR-G7-gTq"/>
+                            <constraint firstItem="XPg-uB-KMp" firstAttribute="centerX" secondItem="nne-vw-IIk" secondAttribute="centerX" id="3Rk-cX-tK8"/>
+                            <constraint firstItem="nne-vw-IIk" firstAttribute="trailing" secondItem="V0h-dR-Pkr" secondAttribute="trailing" id="8fl-vB-fzU"/>
+                            <constraint firstItem="91G-Pk-Dkl" firstAttribute="leading" secondItem="cdP-Pu-5sP" secondAttribute="leadingMargin" id="CQL-O4-JrR"/>
+                            <constraint firstItem="XPg-uB-KMp" firstAttribute="top" secondItem="cNz-sy-Zwo" secondAttribute="bottom" constant="9" id="EhU-ts-NxG"/>
+                            <constraint firstItem="nne-vw-IIk" firstAttribute="leading" secondItem="eGR-5R-LJL" secondAttribute="trailing" constant="23" id="IIH-6g-z0E"/>
+                            <constraint firstItem="eGR-5R-LJL" firstAttribute="centerY" secondItem="nne-vw-IIk" secondAttribute="centerY" id="LwP-xL-IL3"/>
+                            <constraint firstItem="cNz-sy-Zwo" firstAttribute="leading" secondItem="91G-Pk-Dkl" secondAttribute="trailing" constant="17" id="M58-GW-EvF"/>
+                            <constraint firstItem="cNz-sy-Zwo" firstAttribute="centerX" secondItem="cdP-Pu-5sP" secondAttribute="centerX" id="S3Q-SA-nzW"/>
+                            <constraint firstItem="cNz-sy-Zwo" firstAttribute="top" secondItem="rtA-QJ-qEA" secondAttribute="bottom" constant="50" id="U9I-FT-7CO"/>
+                            <constraint firstItem="cNz-sy-Zwo" firstAttribute="centerX" secondItem="XPg-uB-KMp" secondAttribute="centerX" id="UR3-Qk-NbU"/>
+                            <constraint firstItem="nne-vw-IIk" firstAttribute="leading" secondItem="V0h-dR-Pkr" secondAttribute="leading" id="VCG-MF-DLv"/>
+                            <constraint firstItem="eGR-5R-LJL" firstAttribute="top" secondItem="91G-Pk-Dkl" secondAttribute="bottom" constant="69" id="W1O-Ub-C5j"/>
+                            <constraint firstItem="V0h-dR-Pkr" firstAttribute="top" secondItem="nne-vw-IIk" secondAttribute="bottom" constant="91" id="a3I-e8-vRU"/>
+                            <constraint firstItem="91G-Pk-Dkl" firstAttribute="centerY" secondItem="cNz-sy-Zwo" secondAttribute="centerY" id="fg8-5M-Yt1"/>
+                            <constraint firstItem="91G-Pk-Dkl" firstAttribute="leading" secondItem="eGR-5R-LJL" secondAttribute="leading" id="nwH-Kb-KLQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="loginButton" destination="V0h-dR-Pkr" id="oXS-Nh-hIm"/>
+                        <outlet property="passwordTextField" destination="nne-vw-IIk" id="ibB-dd-Hh3"/>
+                        <outlet property="usernameLabel" destination="XPg-uB-KMp" id="3i6-gg-Zkr"/>
+                        <outlet property="usernameTextField" destination="cNz-sy-Zwo" id="Zow-8Y-XA7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X0n-aG-oOh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1711" y="139"/>
+        </scene>
+        <!--Container View Controller-->
+        <scene sceneID="3f9-wZ-YoA">
+            <objects>
+                <viewController id="jnf-iy-T1o" customClass="ContainerViewController" customModule="LoginWithRxSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Lar-uV-SUZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="kww-eN-PlO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hKN-k9-48r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="miM-fe-2J5">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x9e-Pv-afV" customClass="conta">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="pQi-0f-1Ob" detailTextLabel="bss-UD-Y2z" style="IBUITableViewCellStyleSubtitle" id="gxd-7e-f0d">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gxd-7e-f0d" id="X1M-yQ-Dn9">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pQi-0f-1Ob">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bss-UD-Y2z">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="x9e-Pv-afV" firstAttribute="leading" secondItem="hKN-k9-48r" secondAttribute="leading" id="3R8-4N-Ac3"/>
+                            <constraint firstItem="miM-fe-2J5" firstAttribute="leading" secondItem="hKN-k9-48r" secondAttribute="leading" id="4sG-9B-HJ2"/>
+                            <constraint firstItem="miM-fe-2J5" firstAttribute="top" secondItem="Lar-uV-SUZ" secondAttribute="bottom" id="9sb-ws-Ior"/>
+                            <constraint firstAttribute="trailing" secondItem="x9e-Pv-afV" secondAttribute="trailing" id="Lc5-CT-h8n"/>
+                            <constraint firstItem="x9e-Pv-afV" firstAttribute="top" secondItem="miM-fe-2J5" secondAttribute="bottom" id="gbg-9t-joM"/>
+                            <constraint firstItem="kww-eN-PlO" firstAttribute="top" secondItem="x9e-Pv-afV" secondAttribute="bottom" id="owD-CL-ekf"/>
+                            <constraint firstAttribute="trailing" secondItem="miM-fe-2J5" secondAttribute="trailing" id="tlX-gY-Rca"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="miM-fe-2J5" id="qMe-7v-cIX"/>
+                        <outlet property="tableView" destination="x9e-Pv-afV" id="0Lw-Wk-QIN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C5v-Qp-9OE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2519" y="139"/>
         </scene>
     </scenes>
 </document>
